src/test/resources/valid_programs/arithmetic__double_division.notc
void main() {
    printDouble( 9.75 /  3.0);
    printDouble(80.5  / -2.0);
    printDouble(-4.5  /  9.0);
    printDouble(-1.0  / -0.25);

    printDouble(44.125 / 1.0);
    printDouble(0.0 / 222.2);
}
