src/test/resources/semantic_errors/redecl_fun.notc
int fun() {
    return 1;
}

int fun() {
    return 2;
}

void main() {
}
